--- a/.npmrc
+++ b/.npmrc
@@ -1,20 +1,2 @@
-{
-  "singleQuote": true,
-  "trailingComma": "all",
-  "endOfLine": "lf",
-  "overrides": [
-    {
-      "files": ["*.svg"],
-      "options": {
-        "parser": "html",
-        "htmlWhitespaceSensitivity": "ignore"
-      }
-    },
-    {
-      "files": ["public/*.html"],
-      "options": {
-        "trailingComma": "es5"
-      }
-    }
-  ]
-}
+message=":bookmark: Version %s"
+git-tag-version=true
